--- a/tic_tac.css
+++ b/tic_tac.css
@@ -39,7 +39,7 @@ h1{
     box-shadow: 0 0 1rem rgba(0,0,0,0.3);
     font-size: 8vmin;
     background-color: #ffffc7;
-    color: brown;
+    color: rgb(219, 25, 25);
     cursor: pointer;
 }
 
