--- a/tic_tac.css
+++ b/tic_tac.css
@@ -52,8 +52,8 @@ h1{
 #new-btn{
     padding: 1rem;
     font-size: 1.2rem;
-    background-color: black;
-    color: white;
+    background-color: rgb(0, 0, 0);
+    color: rgb(190, 168, 168);
     border-radius: 1rem;
     border: none;
     cursor: pointer;
